# [#16815] Internal: Sub categories title floats on the right side (IE8) # [#16805] Internal: Minor layout issue in categories view
git-svn-id: file:///Users/oratzes/svn/kunena@874 daf2aa89-cb5b-0410-b8ee-fe93ebc9b27d

--- a/trunk/1.0/components/com_kunena/template/default_ex/kunena.forum.css
+++ b/trunk/1.0/components/com_kunena/template/default_ex/kunena.forum.css
@@ -577,6 +577,9 @@
 #Kunena div.fb_thead-desc {
 	clear: left;
 }
+#Kunena div.fb_thead-moderators {
+	clear: left;
+}
 #Kunena div.fb_thead-child {
 	border-top: 1px dotted #D4C9AD;
 	margin-top: 4px;
@@ -585,6 +588,7 @@
 	border: 0px solid #FFFFFF;
 }
 #Kunena div.fb_cc-childcat-title {
+	width: 100%;
 	vertical-align:top;
 }
 #Kunena div.fb_cc-table {
